Fix some h2 alignment

--- a/src/newSite/skills.css
+++ b/src/newSite/skills.css
@@ -38,6 +38,8 @@
 
   section.skill h2 {
     align-self: center;
+    justify-self: center;
+    max-width: 80%;
   }
 }
 
